PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Sep 2006, PHP 5.2.0
- Added support for hexadecimal entity in imagettftext() for the bundled GD.
  (Pierre)
- Fixed bug #38543 (shutdown_executor() may segfault when memory_limit is too
  low). (Dmitry)
- Fixed bug #38535 (memory corruption in pdo_pgsql driver on error retrieval
  inside a failed query executed via query() method). (Ilia)
- Fixed bug #38524 (strptime() does not initialize the internal date storage
  structure). (Ilia)
- Fixed bug #38511, #38473, #38263 (Fixed session extension request shutdown
  order to ensure it is shutdown before the extensions it may depend on).
  (Ilia)
- Fixed bug #38488 (Access to "php://stdin" and family crashes PHP on win32).
  (Dmitry)
- Fixed bug #38265 (heap corruption). (Dmitry)
- Fixed PECL bug #8112 (OCI8 persistent connections misbehave when Apache 
  process times out). (Tony)


17 Aug 2006, PHP 5.2.0RC2
- Increased default memory limit to 16 megabytes to accommodate for a more
  accurate memory utilization measurement.
- Updated libsqlite in ext/pdo_sqlite to 3.3.7. (Ilia)
- Added support for httpOnly flag for session extension and cookie setting
  functions. (Scott MacVicar, Ilia)
- Added version specific registry keys to allow different configurations for
  different php version. (Richard, Dmitry)
- In addition to path to php.ini, PHPRC now may specify full file name. (Dmitry)
- Added "PHPINIDir" Apache directive to apache and apache_hooks SAPIs. (Dmitry)
- Added an optional boolean parameter to memory_get_usage() and 
  memory_get_peak_usage() to get memory size allocated by emalloc() or real
  size of memory allocated from system. (Dmitry)
- Implemented #38357 (dbase_open can't open DBase 3 dbf file).
  (rodrigo at fabricadeideias dot com, Mike)

- Moved extensions to PECL:
  . ext/filepro (Derick, Tony)
  . ext/hwapi (Derick, Tony)
